--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -9,6 +9,21 @@
   <name>webapp Maven Webapp</name>
   <url>http://maven.apache.org</url>
   
+  <properties>
+    <directorio.javadoc>/usr/bin</directorio.javadoc>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+
+    <jacoco.version>0.8.3</jacoco.version>
+    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+    <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/coverage-reports/jacoco-unit.exec</sonar.coverage.jacoco.xmlReportPaths>
+    <sonar.language>java</sonar.language>    
+    
+  </properties>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -44,6 +59,49 @@
           <path>/miwebapp</path>
         </configuration>
       </plugin>      
+      
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <destDir>/mijavadoc</destDir>
+          <javadocExecutable>${directorio.javadoc}/javadoc</javadocExecutable>
+        </configuration>
+      </plugin>      
+      
+      <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>${jacoco.version}</version>
+          <configuration>
+              <skip>${maven.test.skip}</skip>
+              <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
+              <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
+              <output>file</output>
+              <append>true</append>
+              <excludes>
+                  <exclude>*MethodAccess</exclude>
+              </excludes>
+          </configuration>
+          <executions>
+              <execution>
+                  <id>jacoco-initialize</id>
+                  <goals>
+                      <goal>prepare-agent</goal>
+                  </goals>
+                  <phase>test-compile</phase>
+              </execution>
+              <execution>
+                  <id>jacoco-site</id>
+                  <phase>verify</phase>
+                  <goals>
+                      <goal>report</goal>
+                  </goals>
+              </execution>
+          </executions>
+      </plugin>      
+      
       
     </plugins>
     
